Bug 295125 - Saving message as template doesn't keep transport
Summary: Saving message as template doesn't keep transport
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.8
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-01 11:51 UTC by Antonio Rojas
Modified: 2012-03-01 14:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2012-03-01 11:51:56 UTC
Version:           4.8 (using KDE 4.8.0) 
OS:                Linux

--

Reproducible: Always

Steps to Reproduce:
Start writing a new mail from a particular account, save the message as a template

Actual Results:  
When opening the template, a random mail transport is used to send it, causing potential privacy issues

Expected Results:  
It should use the same transport as the original message.
Comment 1 Laurent Montel 2012-03-01 13:38:29 UTC
I confirm it
Comment 2 Laurent Montel 2012-03-01 14:11:54 UTC
Git commit 7c8329b9fbc82a5b4f799e84140951ecc7afcb94 by Montel Laurent.
Committed on 01/03/2012 at 15:11.
Pushed by mlaurent into branch 'master'.

Fix Bug 295125 - Saving message as template doesn't keep transport

We saved transport name and not transport id
FIXED-IN: 4.8.1

M  +1    -1    messagecomposer/composerviewbase.cpp

http://commits.kde.org/kdepim/7c8329b9fbc82a5b4f799e84140951ecc7afcb94
Comment 3 Laurent Montel 2012-03-01 14:12:41 UTC
Git commit 6a767957abbb0861e50a30db5065e0686b926edb by Montel Laurent.
Committed on 01/03/2012 at 15:11.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 295125 - Saving message as template doesn't keep transport

We saved transport name and not transport id
FIXED-IN: 4.8.1
(cherry picked from commit 7c8329b9fbc82a5b4f799e84140951ecc7afcb94)

M  +1    -1    messagecomposer/composerviewbase.cpp

http://commits.kde.org/kdepim/6a767957abbb0861e50a30db5065e0686b926edb