Fix Bug 295125 - Saving message as template doesn't keep transport

We saved transport name and not transport id
FIXED-IN: 4.8.1
BUG: 295125
(cherry picked from commit 7c8329b9fbc82a5b4f799e84140951ecc7afcb94)